Atualizar o FireSystemChecklist.html

--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -162,7 +162,6 @@
 <body>
   <header>🔥 Laudo de Sistema de Incêndio - Brivax</header>
 
-  <!-- Informações iniciais -->
   <div class="container">
     <div class="info-box">
       <label>Data do Laudo:</label>
@@ -180,85 +179,64 @@
     </div>
   </div>
 
-  <!-- Checklist -->
   <div class="container" id="checklist">
+    <!-- ✅ 23 itens do checklist -->
     <div class="item"><h3>0. Foto da Fachada da Loja</h3><input type="file" multiple /></div>
     <div class="item"><h3>1. Foto geral da cozinha</h3><input type="file" multiple /></div>
     <div class="item"><h3>2. Foto da coifa</h3><input type="file" multiple /></div>
-
-    <div class="item">
-      <h3>3. Foto dos termostatos instalados na coifa</h3><input type="file" multiple />
+    <div class="item"><h3>3. Foto dos termostatos instalados na coifa</h3>
+      <input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
     <div class="item"><h3>4. Foto dos bicos difusores instalados na coifa</h3><input type="file" multiple /></div>
     <div class="item"><h3>5. Foto dos cilindros de saponificante</h3><input type="file" multiple /></div>
     <div class="item"><h3>6. Foto do manômetro do saponificante</h3><input type="file" multiple /></div>
-
-    <div class="item">
-      <h3>7. Foto da solenoide conectada ao saponificante</h3><input type="file" multiple />
+    <div class="item"><h3>7. Foto da solenoide conectada ao saponificante</h3><input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
     <div class="item"><h3>8. Foto do Dumper corta-fogo</h3><input type="file" multiple /></div>
-
-    <div class="item">
-      <h3>9. Foto dos termostatos reguláveis</h3><input type="file" multiple />
+    <div class="item"><h3>9. Foto dos termostatos reguláveis</h3><input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
     <div class="item"><h3>10. Foto do cilindro de CO₂</h3><input type="file" multiple /></div>
-
-    <div class="item">
-      <h3>11. Foto da solenoide de CO₂ conectada</h3><input type="file" multiple />
+    <div class="item"><h3>11. Foto da solenoide de CO₂ conectada</h3><input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
-    <div class="item">
-      <h3>12. Tipo de gás da loja</h3>
+    <div class="item"><h3>12. Tipo de gás da loja</h3>
       <div class="options"><button>GLP</button><button>NATURAL</button></div>
     </div>
-
-    <div class="item">
-      <h3>13. Foto dos detectores de gás</h3><input type="file" multiple />
+    <div class="item"><h3>13. Foto dos detectores de gás</h3><input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
-    <div class="item">
-      <h3>14. Foto da solenoide do gás conectada</h3><input type="file" multiple />
+    <div class="item"><h3>14. Foto da solenoide do gás conectada</h3><input type="file" multiple />
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
       <div class="options"><label>Funcionando:</label><button>Sim</button><button>Não</button></div>
     </div>
-
     <div class="item"><h3>15. Foto da comunicação da central do shopping</h3><input type="file" multiple /></div>
     <div class="item"><h3>16. Foto do quadro elétrico com disjuntor disponível</h3><input type="file" multiple /></div>
     <div class="item"><h3>17. Foto do quadro de exaustão com contato seco N/F</h3><input type="file" multiple /></div>
     <div class="item"><h3>18. Foto da central aberta com conexões feitas</h3><input type="file" multiple /></div>
     <div class="item"><h3>19. Foto da central fechada e lacrada</h3><input type="file" multiple /></div>
-
-    <div class="item">
-      <h3>20. Treinamento realizado?</h3>
+    <div class="item"><h3>20. Treinamento realizado?</h3>
       <div class="options"><button>Sim</button><button>Não</button></div>
       <textarea placeholder="Nome do funcionário, função e observações ou justificativa se não houver."></textarea>
       <button class="signature-btn" onclick="openSignature('treinamento')">Assinar Treinamento</button>
     </div>
-
-    <div class="item">
-      <h3>21. Pendências</h3>
+    <div class="item"><h3>21. Pendências</h3>
       <div class="options"><button>Brivax</button><button>Cliente</button></div>
       <textarea placeholder="Descreva as pendências"></textarea>
       <input type="file" multiple />
     </div>
-
-    <div class="item"><h3>22. Observações do Técnico</h3><textarea placeholder="Observações gerais do técnico"></textarea></div>
+    <div class="item"><h3>22. Observações do Técnico</h3>
+      <textarea placeholder="Observações gerais do técnico"></textarea>
+    </div>
   </div>
 
-  <!-- Rodapé -->
   <div class="footer">
     <input type="text" placeholder="E-mail do cliente" id="emailCliente" />
     <input type="text" placeholder="Telefone do cliente" id="telefoneCliente" />
@@ -267,7 +245,6 @@
     <button class="generate" onclick="gerarLaudoFire()">Gerar e Enviar Laudo</button>
   </div>
 
-  <!-- Modal Assinatura -->
   <div class="signature-modal" id="signatureModal">
     <div class="signature-box">
       <canvas id="signaturePad"></canvas>
@@ -279,11 +256,11 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
   <script src="../js/pdf-template.js"></script>
   <script src="../js/SystemFireReport.js"></script>
+
   <script>
-    // === Botões Sim / Não ===
     document.querySelectorAll('.options button').forEach(btn => {
       btn.addEventListener('click', () => {
         const group = btn.parentNode.querySelectorAll('button');
@@ -292,7 +269,6 @@
       });
     });
 
-    // === Preview e Remoção de Fotos ===
     document.querySelectorAll('input[type="file"]').forEach(input => {
       input.addEventListener('change', () => {
         const previewBox = document.createElement('div');
@@ -314,7 +290,6 @@
             img.style.height = '100%';
             img.style.objectFit = 'cover';
             img.style.borderRadius = '6px';
-            imgBox.appendChild(img);
             const removeBtn = document.createElement('button');
             removeBtn.textContent = '×';
             removeBtn.style.position = 'absolute';
@@ -328,6 +303,7 @@
             removeBtn.style.height = '20px';
             removeBtn.style.cursor = 'pointer';
             removeBtn.addEventListener('click', () => imgBox.remove());
+            imgBox.appendChild(img);
             imgBox.appendChild(removeBtn);
             previewBox.appendChild(imgBox);
           };
@@ -336,21 +312,48 @@
       });
     });
 
-    // === Assinaturas individuais ===
     const modal = document.getElementById('signatureModal');
     const canvas = document.getElementById('signaturePad');
     const ctx = canvas.getContext('2d');
     let drawing = false, activeField = '';
 
-    canvas.addEventListener('mousedown', e => { drawing = true; ctx.moveTo(e.offsetX, e.offsetY); });
+    function disableScroll() {
+      document.body.style.overflow = 'hidden';
+      document.addEventListener('touchmove', preventScroll, { passive: false });
+    }
+    function enableScroll() {
+      document.body.style.overflow = '';
+      document.removeEventListener('touchmove', preventScroll);
+    }
+    function preventScroll(e) { e.preventDefault(); }
+
+    canvas.addEventListener('mousedown', e => { drawing = true; ctx.beginPath(); ctx.moveTo(e.offsetX, e.offsetY); disableScroll(); });
     canvas.addEventListener('mousemove', e => { if (!drawing) return; ctx.lineTo(e.offsetX, e.offsetY); ctx.stroke(); });
-    canvas.addEventListener('mouseup', () => drawing = false);
+    canvas.addEventListener('mouseup', () => { drawing = false; enableScroll(); });
+
+    canvas.addEventListener('touchstart', e => {
+      e.preventDefault();
+      const touch = e.touches[0];
+      const rect = canvas.getBoundingClientRect();
+      ctx.beginPath();
+      ctx.moveTo(touch.clientX - rect.left, touch.clientY - rect.top);
+      drawing = true;
+      disableScroll();
+    });
+    canvas.addEventListener('touchmove', e => {
+      if (!drawing) return;
+      e.preventDefault();
+      const touch = e.touches[0];
+      const rect = canvas.getBoundingClientRect();
+      ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top);
+      ctx.stroke();
+    });
+    canvas.addEventListener('touchend', () => { drawing = false; enableScroll(); });
 
     function openSignature(field){ activeField = field; modal.style.display='flex'; ctx.clearRect(0,0,canvas.width,canvas.height);}
     function clearSignature(){ ctx.clearRect(0,0,canvas.width,canvas.height);}
-    function saveSignature(){ localStorage.setItem(`assinatura_${activeField}`, canvas.toDataURL("image/png")); modal.style.display='none'; alert(`✅ Assinatura de ${activeField} salva!`);}
-    function closeSignature(){ modal.style.display='none'; }
-    function capturarAssinaturas(){ return { tecnico: localStorage.getItem("assinatura_tecnico")||null, cliente: localStorage.getItem("assinatura_cliente")||null, treinamento: localStorage.getItem("assinatura_treinamento")||null }; }
+    function saveSignature(){ const data = canvas.toDataURL("image/png"); localStorage.setItem(`assinatura_${activeField}`, data); modal.style.display='none'; enableScroll(); alert(`✅ Assinatura de ${activeField} salva!`);}
+    function closeSignature(){ modal.style.display='none'; enableScroll(); }
   </script>
 </body>
 </html>
